updated cleaned script added analysis and added READ ME

--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "- Add your analysis here.\n",
+    "- In result Capomulin was effective in reducing the average tumor size in mice over a 45 day period. On the otherhand no data shows the tumor completely dissapearing but maybe if the study was continued we might be able to tell. \n",
     " "
    ]
   },
